assets/src/scss/layout/header.scss
/* ... */
a.header-title,
a.header-university-link,
a.header-unit-link {
  transition: color 0.5s ease;

  padding: 0 2px;
  margin: 0 -2px;
  &:focus {
    outline-color: $color-black;
    outline-offset: 2px;
    outline-style: dotted;
    outline-width: 1px;
  }
}

.header-top-brand .divider {
  transition: border-left 0.5s ease;
}

a.header-title {
  color: $color-black;
  display: block;
  // font-size: fix-font-size-hack(1.375em);
  @include property-with-fluid-value("font-size", 18px, 24px, 1280px, 1600px);
  font-weight: 700;
  line-height: 1.1;
  text-decoration: none;
  padding: 0.25em;
  margin: -0.25em;

  &:hover,
  &:focus {
    text-decoration: underline;
  }
}

a.header-university-link,
a.header-unit-link {
  color: $color-black;
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: underline;
  }
}

a.header-university-link {
  align-items: center;
  display: flex;
  white-space: nowrap;

  @if $better-header-design {
    margin-bottom: 0.25em;
  }
}

a.header-unit-link {
  @if $better-header-design {
    text-align: center;
  }
}

.header {
  .university-logo-simplified {
    display: block;
    margin-right: 0.625em;
    width: 19px;
  }

  .university-logo {
    display: block;
    width: 128px;
  }

  .university-logo-fill {
    transition: fill 0.4s ease;
  }
}

@media (min-width: $breakpoint-sm) {
  @if $better-header-design {
    .header-top-brand {
      flex-direction: row;
      flex-grow: 1;
      justify-content: flex-start;

      .divider {
        display: inline;
      }
    }

    a.header-university-link {
      margin-bottom: 0;
    }
    a.header-unit-link {
      text-align: left;
    }
  }
}

@if not $menu-is-always-mobile {
  @media (min-width: 1280px) {
    // Main desktop layout, when mobile menu was open
    .mobile-menu-open {
      overflow: initial;
      padding-top: 0;

      .header {
        background-color: $color-white;
        height: initial;
        left: initial;
        overflow-y: initial;
        position: relative;
        top: initial;
        transition-delay: initial;

        &:after {
          display: none;
        }

        .university-logo-fill {
          fill: $color-black;
          transition: none;
        }
      }

      .header-menu-trigger {
        &:before,
        &:after {
          background-color: $color-black;
        }
        & > .header-menu-trigger-midbar {
          &:before,
          &:after {
            background-color: $color-black;
          }
        }
      }

      .header-search-trigger {
        i {
          transition: filter 0.5s ease;
          filter: none;
        }
        &:hover,
        &:active {
          background-color: $color-black;
          i {
            transition: none;
            filter: invert(1);
          }
        }
      }

      a.header-title,
      a.header-university-link,
      a.header-unit-link {
        color: unset;

        &:focus {
          outline-color: $color-black;
        }
      }

      .header-top-brand .divider {
        border-left: 1px solid $color-gray-medium;
      }
    }

    // Hide mobile-only elements
    .header-menu-trigger,
    .header-mobile-menu.open {
      display: none;
    }

    // Show main UI elements
    .header-top {
      justify-content: flex-end;
    }

    .header-top-meta,
    .header-main-nav,
    .header-secondary-nav,
    .header-language-switcher {
      display: block;
    }

    .header-main-brand {
      flex: 0 0 auto;
    }
  }
}

@if $header-container-type == "stretched" {
  @media (min-width: 1280px) {
    .header-container {
      & > .container {
        max-width: none;
      }
    }
  }

  @if $website-container-type == "fixed" {
    @media (min-width: $breakpoint-xl) {
      .header-container {
        & > .container {
          padding-left: $website-container-base-padding +
            $website-container-step-padding * 4;
          padding-right: $website-container-base-padding +
            $website-container-step-padding * 4;
        }
      }
    }

    @media (min-width: $breakpoint-xxl) {
      .header-container {
        & > .container {
          padding-left: $website-container-base-padding +
            $website-container-step-padding * 5;
          padding-right: $website-container-base-padding +
            $website-container-step-padding * 5;
        }
      }
    }

    @media (min-width: $breakpoint-sl) {
      .header-container {
        & > .container {
          padding-left: $website-container-base-padding +
            $website-container-step-padding * 6;
          padding-right: $website-container-base-padding +
            $website-container-step-padding * 6;
        }
      }
    }
  }
}

// Animations and transition mediaqueries
// Override motion sickness-inducing animations
@media (prefers-reduced-motion: reduce) {
  .header {
    &:after {
      transition: none;
    }
  }

  .header-main-nav {
    .menu-link {
      transition: none;
    }
  }
}

// Keyframes
@keyframes slide-in-left {
  from {
    transform: translateX(-100vw);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slide-out-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100vw);
  }
}

@keyframes slide-in-top {
  from {
    transform: translateY(-100%);
  }
  to {
    transform: translateY(0);
  }
}

@keyframes slide-out-top {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(-100%);
  }
}

@import "./_header-with-submenu.scss";
@if $header-with-submenu {
  @include header-with-submenu();
}

